# PrismShift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TAGS  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  common.hpp  interval.hpp  make.sh  material.hpp  objects.hpp  renderer.cpp  renderer.hpp  scene.hpp  source.cpp  sphere.hpp  test.json  vector3.hpp
.github/workflows/: ci.yml
common/: color.cpp  color.hpp  common.hpp  constant.hpp  interval.hpp  interval.hpp~  random.cpp  random.hpp  ray.cpp  ray.hpp  vector3.cpp  vector3.hpp
dev/: CMakeLists.txt
dev/src/: geometry.cpp  geometry.hpp  matrix.cpp  matrix.hpp  random.hpp  transform.cpp  transform.hpp
dev/test/: geometry-test.cpp  transform-test.cpp
examples/: background.json  hello_world.json
images/: light.ppm  metal-glass-balls-hq.ppm  texture-mapping.ppm
include/: args.cpp  args.cpp~  args.hpp  args.hpp~  global_config.cpp  global_config.cpp~  global_config.hpp  global_config.hpp~
include/test/: arg-parser-test.cpp  arg-parser-test.cpp~  global-config-test.cpp  global-config-test.cpp~
scene/: planets.in  test.in
scripts/: diagnostics.py
src/: CMakeLists.txt  imp.hpp  main.cpp  simple_renderer.cpp  simple_renderer.hpp  source.cpp
src/tracer/: CMakeLists.txt  aggregator.cpp  aggregator.hpp  arch.cpp  arch.hpp  bsdf.cpp  bsdf.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  core.hpp  factory.hpp  hit_record.hpp  integrator.cpp  integrator.hpp  light.hpp  mapping.cpp  mapping.hpp  material.cpp  material.hpp  primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_factory.cpp  scene_factory.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  trowbridge_reitz_distribution.cpp  trowbridge_reitz_distribution.hpp
src/tracer/bxdfs/: conductor.cpp  conductor.hpp  dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp
src/tracer/lights/: light.hpp  pointlight.cpp  pointlight.hpp
src/tracer/materials/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  material.hpp  metal.cpp  metal.hpp  phong.cpp  phong.hpp
src/tracer/shapes/: shape.hpp
src/tracer/shapes/2d/: parallelogram.cpp  parallelogram.hpp  plane.cpp  plane.hpp  triangle.cpp  triangle.hpp
src/tracer/shapes/3d/: sphere.cpp  sphere.hpp
src/tracer/textures/: imagetexture.cpp  imagetexture.hpp  solidcolor.cpp  solidcolor.hpp  texture.hpp
src/tracer/util/: aabb.cpp  aabb.hpp  color.cpp  color.hpp  constant.hpp  coordinate.cpp  coordinate.hpp  decomposer.hpp  geometry.cpp  geometry.hpp  geometry_fwd.hpp  interval.cpp  interval.hpp  mat.hpp  matrix.hpp  prshdefs.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  sampling.cpp  sampling.hpp  simd_vector.hpp  transform.cpp  transform.hpp  util.hpp  vecmath.hpp  vector.cpp  vector.hpp  vector2.cpp  vector3.cpp  vector3.hpp
test/: CMakeLists.txt  aabb-test.cpp  aggregator-test.cpp  bsdf-test.cpp  bvh-aabb-test.cpp  bvh-test.cpp  bxdf-test.cpp  camera-test.cpp  conductor-test.cpp  constant.hpp  coordinate-test.cpp  decompose-test.cpp  dielectric-test.cpp  geometry-test.cpp  ggx-test.cpp  interval-test.cpp  lambertian-test.cpp  mapping-test.cpp  matrix-test.cpp  parallelogram-test.cpp  primitive-test.cpp  ray-intersection-test.cpp  ray-test.cpp  source.cpp  sphere-test.cpp  transform-test.cpp  triangle-test.cpp  vec-comparer.cpp  vector2-test.cpp  vector3-test.cpp
test/common/: mshape.hpp  transformations.hpp
test/shape/: plane-test.cpp  shape-interface-test.cpp  shape-interface-test.hpp  sphere-test.cpp
tracer/: CMakeLists.txt~  arch.cpp  arch.hpp  basic_material.cpp  basic_material.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  core.hpp  core.hpp~  factory.cpp~  factory.hpp  material.hpp  objects.hpp  renderer.cpp  renderer.hpp  scene.hpp  shape.hpp  sphere.cpp  sphere.cpp~  sphere.hpp  visual_shape.hpp
tracer/common/: color.hpp  common.hpp  mat.hpp  vector3.cpp
tracer/lights/: pointlight.cpp  pointlight.hpp
tracer/materials/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  metal.cpp  metal.hpp
tracer/shapes/: shape.hpp  sphere.cpp  sphere.hpp
tracer/shapes/2d/: parallelogram.cpp  parallelogram.hpp  plane.cpp  plane.hpp  triangle.cpp  triangle.hpp
tracer/shapes/3d/: sphere.cpp  sphere.hpp
tracer/test/: bvh-test.cpp  decompose-test.cpp  interval-test.cpp  plane-test.cpp  ray-test.cpp  sphere-test.cpp  triangle-test.cpp  vec-comparer.cpp  vec-comparer.hpp
tracer/test/util/: vector2-test.cpp
tracer/textures/: imagetexture.hpp  solidcolor.cpp  solidcolor.hpp  texture.hpp
tracer/util/: aabb.cpp  aabb.hpp  color.cpp  constant.hpp  decomposer.hpp  interval.hpp  ray.cpp  ray.hpp  util.hpp  vector2.hpp  vector3.cpp
